/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/bosca/content";

import "bosca/content/metadata.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package bosca.content;

enum CollectionType {
  standard = 0;
  folder = 1;
  root = 2;
}

message AddCollectionRequest {
  string parent = 1;
  Collection collection = 2;
}

message AddCollectionsRequest {
  repeated AddCollectionRequest collections = 1;
}

message AddCollectionItemRequest {
  string collection_id = 1;
  oneof item_id {
    string child_collection_id = 2;
    string child_metadata_id = 3;
  }
}

message Collection {
  string id = 2;
  string name = 3;

  CollectionType type = 5;

  repeated string category_ids = 12;
  repeated string labels = 13;
  map<string, string> attributes = 14;

  google.protobuf.Timestamp created = 20;
  google.protobuf.Timestamp modified = 21;

  google.protobuf.Struct metadata = 33;
}

message CollectionItems {
  repeated CollectionItem items = 1;
}

message CollectionItem {
  oneof Item {
    Metadata metadata = 1;
    Collection collection = 3;
  }
}
